# vscode-artic

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md  build.ninja to artic.json script.py  build_lsp.sh  demo.art  language-configuration.json  package-lock.json  package.json  package.sh  package_extension.sh  publish.sh  setup.sh  tsconfig.json  workspaces.md
artic-lsp/: CMakeLists.txt  build.sh
artic-lsp/cmake/: Dependencies.cmake  windows-mingw.cmake
artic-lsp/include/: compile.h  config.h  server.h  workspace.h
artic-lsp/src/: compile.cpp  config.cpp  crash.cpp  main.cpp  server.cpp  workspace.cpp
lsp/include/: config.h  crash.h
lsp/src/: b_stacktrace.h  compile.cpp  workspace.cpp
snippets/: artic.json
src/: extension.ts
syntaxes/: artic.tmGrammar.json
vscode/: README.md  build-lsp.sh  build_lsp.sh  language-configuration.json  package-lock.json  package.json  package.sh  publish.sh  test-lsp.js
vscode/snippets/: artic.json
vscode/src/: extension.ts
